feat: union graphs + oai-pmh